--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </p>
         </td>
         <td>
-            <img src="../myimage.jpg"
+            <img src="myimage.jpg"
                 alt="Yonatan profile picture" width="200" height="200">
         </td>
 
