--- a/index.html
+++ b/index.html
@@ -3,26 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title> Yonatan's Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <table cellspacing="20">
-        <td>
-            <h1>Yonatan Leibovitch</h1>
-                <h2> Overview:</h2>
-                    <p><strong>System engineer</strong> with over <strong>10 years of experience on multiple disciplines</strong>
-                                (Software, DevOps, Cyber, Firmware, IT etc.).<br>
-                                Highly <strong>motivated</strong>, <strong>Quick learner</strong>.<br>
-                                <strong>Hard worker</strong> and <strong>self-reliant</strong>.<br>
-                                Great <strong>interpersonal</strong> skills.<br>
-                                <strong>Interested to specialize in software development</strong>.<br>
-                    </p>
-        </td>
-        <td>
-            <img src="myimage.jpg"
-                alt="Yonatan profile picture" width="200" height="200">
-        </td>
-
-    </table>
+    <h1>Yonatan Leibovitch</h1> <img src="../myimage.jpg"
+        alt="Yonatan profile picture" width="200" height="200">
+        <h2> Overview:</h2>
+            <p><strong>System engineer</strong> with over <strong>10 years of experience on multiple disciplines</strong><br>
+                        (Software, DevOps, Cyber, Firmware, IT etc.).<br>
+                        Highly <strong>motivated</strong>, <strong>Quick learner</strong>.<br>
+                        <strong>Hard worker</strong> and <strong>self-reliant</strong>.<br>
+                        Great <strong>interpersonal</strong> skills.<br>
+                        <strong>Interested to specialize in software development</strong>.<br>
+            </p>
 
         <hr size="3" noshade="0">
         <h2> Education and Awards:</h2>
@@ -35,59 +28,61 @@
         <hr>
         <h2> Experience:</h2>
             <h3> IDF Officer (Major) on multiple Technology Units:</h3>
-            <table cellspacing="20">
-                <tr>
-                    <td>2021-Nov 2022:</td>
-                    <td>DevOps engineer, team leader in IDF</td>
-                    <td>Design and develop enhance IT platforms, k8s / docker based.<br>
-                        Design Dev - Test - Deploy environments & CI-CD pipelines include tools and security measurements.<br>
-                        Build whole IT solutions include HW and SW infrastructures.<br>
-                        Write HLD, LLD and technical documents.<br></td>
-                </tr>
+                <h4>
+                    2021-Nov 2022: DevOps engineer, team leader in IDF
+                </h4>
+                    <p>
+                        Design and develop enhance IT platforms, k8s / docker based<br>
+                        Design Dev - Test - Deploy environments & CI-CD pipelines, include tools and security measurements<br>
+                        Build whole IT solutions include HW and SW infrastructures<br>
+                        Write HLD, LLD and technical documents<br>
+                    </p>
                 <br>
-                <tr>
-                    <td>2017-2021:</td>
-                    <td>System Security Engineer in DDR&D (“Mafa’t”)</td>
-                    <td>Design and implement cyber-security solution suites on large-scale.<br>
-                        Write Threat and Risk Assessment on HW, SW, IT, RF and OS threats and vulnerabilities.<br>
-                        Create and implement multi-year strategy plan.<br>
-                        R&D leader for new cyber-security solutions.<br>
-                        Implementing Dedicated data filter, based on JSON files and schemas.<br></td>
-                </tr>
+                <h4>
+                    2017-2021: System Security Engineer in DDR&D (“Mafa’t”)
+                </h4>
+                    <p>
+                        Design and implement cyber-security solution suites on large-scale<br>
+                        Write Threat and Risk Assessment on HW, SW, IT, RF and OS threats and vulnerabilities<br>
+                        Create and implement multi-year strategy plan<br>
+                        R&D leader for new cyber-security solutions<br>
+                        Implementing Dedicated data filter, based on JSON files and schemas<br>
+                    </p>
+
                 <br>
-                <tr>
-                    <td>2013-2016:</td>
-                    <td>Software developer, Team leader in Matzov Unit</td>
-                    <td>Design and develop embedded real-time systems.<br>
-                            Leading the development of cryptographic systems (mostly written in C++ and VHDL).<br>
-                            Programming modules of cryptographic systems.<br>
-                </tr>
-            </table>
+                <h4>
+                     2013-2016: Software developer, Team leader in Matzov Unit
+                </h4>
+                    <p>
+                        Design and develop embedded real-time systems<br>
+                        Leading the development of cryptographic systems (mostly written in C++ and VHDL)<br>
+                        Programming modules of cryptographic systems<br>
+                    </p>
         <hr>
         <h2> Skills:</h2>
-            <ul>
-                <li>Python</li>
-                <li>c/c++</li>
-                <li>HTML5</li>
-                <li>OS – Linux, Windows</li>
-                <li>DevOps tools – Git, Jenkins, Salt, Grafana, Argo CD etc.</li>
-                <li>Kubernetes, Docker</li>
-            </ul>
+            <p>
+                Python<br>
+                c/c++<br>
+                HTML5<br>
+                OS – Linux, Windows<br>
+                DevOps tools – Git, Jenkins, Salt, Grafana, Argo CD etc.<br>
+                Kubernetes, Docker<br>
+            </p>
         <hr>
         <h2> Courses:</h2>
-            <ul>
-                <li>Python for developers (UDEMY)</li>
-                <li>Cyber-security solution (Orientation in Matzov)</li>
-                <li>Linux scripting (Bash and Python)</li>
-                <li>Web Foundation (UDEMY)</li>
-                <li>Introduction for Linux OS</li>
-                <li>Nutanix Enterprise Cloud Administration course</li>
-            </ul>
+            <p>
+                Python for developers (UDEMY)<br>
+                Cyber-security solution (Orientation in Matzov)<br>
+                Linux scripting (Bash and Python)<br>
+                Web Foundation (UDEMY)<br>
+                Introduction for Linux OS<br>
+                Nutanix Enterprise Cloud Administration course<br>
+            </p>
         <hr>
         <h2> Contact info:</h2>
-            <ul>
-                <li>Email: Leibo1990@gmail.com</li>
-                <li>Phone number: (972)522227170</li>
-            </ul>
+            <p>
+                Email: Leibo1990@gmail.com<br>
+                Phone number: (972)522227170<br>
+            </p>
 </body>
 </html>
