--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Yonatan Leibovitch</h1> <img src="../myimage.jpg"
+    <h1>Yonatan Leibovitch</h1> <img src="myimage.jpg"
         alt="Yonatan profile picture" width="200" height="200">
         <h2> Overview:</h2>
             <p><strong>System engineer</strong> with over <strong>10 years of experience on multiple disciplines</strong><br>
