--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
         <hr size="3" noshade="0">
         <h2> Education and Awards:</h2>
-            <p> Winner of the 2022 <em>IDF Chief of Staff Innovation award.</em><br>
+            <p> Winner of the 2022 <em>IDF Chief of Staff Innovation award</em><br>
                 Designing cyber-security solution suites for an <em>Israel Defense Award</em> system<br>
-                <em>M.B.A, Bar-Ilan University.</em><br>
+                <em>M.B.A, Bar-Ilan University</em><br>
                 <em>Wolfson Foundation Award for excellency</em> (2016)<br>
-                <em>B.Sc (Computer Engineering), Bar-Ilan University.</em>
+                <em>B.Sc (Computer Engineering), Bar-Ilan University</em>
             </p>
         <hr>
         <h2> Experience:</h2>
