--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title> Yonatan's Personal Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="../favicon.ico">
 </head>
 <body>
     <h1>Yonatan Leibovitch</h1> <img src="myimage.jpg"
