--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         alt="Yonatan profile picture" width="200" height="200">
         <h2> Overview:</h2>
             <p><strong>System engineer</strong> with over <strong>10 years of experience on multiple disciplines</strong><br>
-                        (Software, DevOps, Cyber, Firmware, IT etc.).<br>
-                        Highly <strong>motivated</strong>, <strong>Quick learner</strong>.<br>
-                        <strong>Hard worker</strong> and <strong>self-reliant</strong>.<br>
-                        Great <strong>interpersonal</strong> skills.<br>
-                        <strong>Interested to specialize in software development</strong>.<br>
+                        (Software, DevOps, Cyber, Firmware, IT etc.)<br>
+                        Highly <strong>motivated</strong>, <strong>Quick learner</strong><br>
+                        <strong>Hard worker</strong> and <strong>self-reliant</strong><br>
+                        Great <strong>interpersonal</strong> skills<br>
+                        <strong>Interested to specialize in software development</strong><br>
             </p>
 
         <hr size="3" noshade="0">
